--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Alpixel\\Bundle\\ElasticaUtilsBundle\\": ""
+            "Alpixel\\Bundle\\ElasticaQuerySorterBundle\\": ""
         }
     }
 }
